--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "big.js": "^6.2.2",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "next": "15.2.0",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/big.js": "^6.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
